added checks of connection and if devices is mobile

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^9.15.0",
     "peerjs": "^1.4.7",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.0",
     "react-scripts": "5.0.1",
